Fixed the height of the backgrounds on Mobile

--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -395,6 +395,8 @@ main {
   margin-top: 95px;
   padding: 30px;
   width: 100vw;
+  height: 100%;
+  min-height: 740px;
 }
 
 .frequency-section {
@@ -459,7 +461,8 @@ main {
   flex: 1 1 auto; /* grow and shrink, fill remaining space */
   overflow-y: auto;
   width: 100vw;
-  height: 67vh;
+  height: 100%;
+  min-height: 740px;
   margin-top: 95px;
   display: flex;
   align-items: start;
